main/staging/namespaces/istio-system/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service-fe
spec:
  hosts:
  - "fundhubdev.local"
  gateways:
  - frontend-gateway
  http:
  - name: "fundhub-dev-app"
    route: 
    - destination:
        host: fundhub-client-dev-svc.frontend.svc.cluster.local
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service-fe-dashboard
spec:
  hosts:
  - "fundhubdev.dashboard.local"
  gateways:
  - frontend-gateway
  http:
  - name: "fundhub-dev-dashboard"
    route: 
    - destination:
        host: fundhub-dashboard-dev-svc.frontend.svc.cluster.local
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service-be
spec:
  hosts:
  - "fundhubdev.api.local"
  gateways:
  - backend-gateway
  http:
  - name: "fundhub-api-app"
    route: 
    - destination:
        host: fundhub-api-dev-svc.backend.svc.cluster.local
